# vettel

./: .gitignore  LICENSE  PKGBUILD  README.md  f1.py  init  setup.cfg  setup.py  vet.py
lib/: classes.py  helpers.py
sql/: calendar.sql  driver-pits.sql  driver-qualifying.sql  driver-races.sql  driver-season-overview.sql  gp-race.sql  race-qualifying.sql  race.sql  sprint-qualifying-small.sql  sprint-qualifying.sql  sprint.sql
src/: classes.py  helpers.py  tables.py
vettel/: classes.py  database.py  emoji.py  fetchers.py  handlers.py  helpers.py  tables.py
vettel/sql/: best-lap.sql  best-qualifying.sql  calendar.sql  most-wins.sql  qualifying-results.sql  race-qualifying-small.sql  results.sql  season.sql  sprint-qualifying.sql  standings.sql
vettel/sql/circuit/: best-lap.sql  best-qualifying.sql  most-podiums.sql  most-wins.sql
vettel/sql/driver/: pits.sql  qualifying.sql  races.sql  sprints.sql
vettel/sql/race/: qualifying-pre-2006.sql  qualifying-results.sql  qualifying.sql  race-results.sql  race.sql  results.sql
vettel/sql/sprint/: sprint.sql
vettel/sql/standings/: constructor.sql  standings.sql
