[metadata]
name = vettel
version = 1.1.1
description = et different formula 1 statistics and info
long_description = file: README.md
long_description_content_type = text/markdown
author = cebem1nt
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
packages = find:
python_requires = >=3.10
include_package_data = true

[options.package_data]
vettel = sql/*.sql

[options.entry_points]
console_scripts =
    vet = vet:main
