[metadata]
name = vettel
version = 1.2.0
description = et different formula 1 statistics and info
long_description = file: README.md
long_description_content_type = text/markdown
author = cebem1nt
license = MIT

[options]
packages = find:
python_requires = >=3.10
include_package_data = true

[options.package_data]
vettel = sql/*.sql, sql/*/*.sql

[options.entry_points]
console_scripts =
    vet = vet:main
